Use multi language

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 ---
-title: Le gestionnaire de marque-pages dont vous avez besoin
-description: Organisez, accédez et partagez l'information
+layout: localized
+title: The bookmark manager you need
+description: Organize, access and share information
+pid: home
+lang: en
+parmalink: /
 ---
+{% include pages/index.html %}
+
+
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Le gestionnaire de marque-pages <strong>dont vous avez besoin</strong></h1>
-		<p class="subtext editable">Gérez votre univers numérique librement, gratuitement de n'importe où.</p>
-		<div class="cta button alt"><a href="https://mozaic.link/login">Utiliser gratuitement</a></div>
+		<h1 class="editable">The bookmark manager <strong>you need</strong></h1>
+		<p class="subtext editable">Manage your digital universe freely, for free, from anywhere.</p>
+		<div class="cta button alt"><a href="https://mozaic.link/login">Use for free</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/accueil-mozaic-marque-page.png" alt="mozaic le gestionnaire de marque page léger simple efficace" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/accueil-mozaic-marque-page.png" alt="mozaic lightweight, simple and efficient bookmark manager" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -17,8 +24,8 @@ description: Organisez, accédez et partagez l'information
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Comment <strong>améliorer </strong> l'accès à vos informations?</h2>
-				<p>Mozaic permet de capitaliser toues les ressources dont vous avez besoin. Vous pouvez partager en masse ou dans le détail tous vos marque-pages! </p>
+				<h2>How to <strong>improve</strong> access to your information?</h2>
+				<p>Mozaic allows you to centralize all the resources you need. You can share all your bookmarks in bulk or in detail!</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/mozaic-bookmark-manager.png" alt="Screenshot" class="screenshot editable" />
@@ -29,11 +36,11 @@ description: Organisez, accédez et partagez l'information
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Comment puis-je  <strong>trouver</strong> la meilleure organisation?</h2>
-				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager simplement. </p>
+				<h2>How can I <strong>find</strong> the best organization?</h2>
+				<p>Mozaic lets you organize your content visually, find and access any resource in one click, and share it easily.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/organisation-de-l-information-mozaic.png" alt="Organisation avec mozaic" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/organisation-de-l-information-mozaic.png" alt="Organization with Mozaic" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -41,8 +48,8 @@ description: Organisez, accédez et partagez l'information
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Comment  <strong>partager en masse</strong> des informations?</h2>
-				<p>Mozaic vous permet de partager une ou plusieurs ressources en quelques clic, les rendant accessible sur la Mozaic de chaque utilisateur inscrit. Le format systématique permet une grande souplesse dans l'utilisation des données. </p>
+				<h2>How to <strong>share information</strong> in bulk?</h2>
+				<p>Mozaic lets you share one or several resources in just a few clicks, making them accessible on the Mozaic of every registered user. Its consistent format ensures great flexibility in data usage.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/code-echange-marque-pages-mozaic.png" alt="Screenshot" class="screenshot editable" />
@@ -53,17 +60,19 @@ description: Organisez, accédez et partagez l'information
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image"><img src="https://media.licdn.com/dms/image/v2/C4E03AQGMSx_mFxzGwg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1517673456138?e=1756944000&v=beta&t=a7GNvwmo9U2vZGLAq7jzIDIi71nl1wal3-DH0mqrlrY" alt="Henri Lecaye" class="editable"></div>
+				<div class="square-image">
+					<img src="https://media.licdn.com/dms/image/v2/C4E03AQGMSx_mFxzGwg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1517673456138?e=1756944000&v=beta&t=a7GNvwmo9U2vZGLAq7jzIDIi71nl1wal3-DH0mqrlrY" alt="Henri Lecaye" class="editable">
+				</div>
 				<blockquote>
-					<p class="editable">Mozaic me permet d'organiser tous mes projets, de conserver l'accès à certaines informations nécessaires à mon activité et de partager ce que je veux.</p>
-					<p class="editable author">Henri Lecaye - CEO de Designer Fonctionnel.</p>
+					<p class="editable">Mozaic allows me to organize all my projects, keep access to key information for my work, and share whatever I choose.</p>
+					<p class="editable author">Henri Lecaye – CEO of Designer Fonctionnel.</p>
 				</blockquote>
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Améliorer</strong> votre organisation et l'accès à votre univers numérique. </h2>
-		<div class="button alt"><a href="https://mozaic.link/login">Utiliser gratuitement!</a></div>
+		<h2 class="editable"><strong>Improve</strong> your organization and access to your digital universe.</h2>
+		<div class="button alt"><a href="https://mozaic.link/login">Use for free</a></div>
 	</section>
 </div>
