--- a/pages/legals/fr.html
+++ b/pages/legals/fr.html
@@ -1,7 +1,9 @@
 ---
 layout: page
 title: "Mentions Légales"
-permalink: /mentions-legales/
+permalink: /fr/mentions-legales/
+pid: legals
+lang: fr
 ---
 
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Mentions légales</a></p>
