--- a/pages/pricing/fr.html
+++ b/pages/pricing/fr.html
@@ -1,5 +1,9 @@
 ---
-title: Pricing
+layout: page
+lang: fr
+pid: pricing
+permalink: /fr/abonnement/
+title: Abonnement
 heading: Trouvez l'offre dont vous avez besoin 
 description: Toutes les offres vous permettent de gérer vos marque-pages personnellement ou professionnellement.
 pricing_table:
@@ -67,31 +71,4 @@ faq:
   - question: Questions?
     answer: Pour toute question ou autre <a href="#">nfo@mozaic.link</a>.
 ---
-<div class="plans">
-	{% for plan in page.pricing_table %}
-		<ul class="plan">
-			<li style="background: {{ plan.color }}">
-				<h3>{{ plan.name }}</h3>
-			</li>
-			{% for feature in plan.features %}
-				<li {% if feature.highlight %} class="highlighted"{% endif %}>{{ feature.text }}</li>
-			{% endfor %}
-
-			{% if plan.call_to_action %}
-				<li class="pricing-cta"><div class="button"><a style="background: {{ plan.color }}" href="{{ plan.call_to_action.link }}">{{ plan.call_to_action.text }} &rarr;</a></div></li>
-			{% endif %}
-		</ul>
-	{% endfor %}
-</div>
-
-{% if page.faq %}
-	<h2>Pricing FAQ</h2>
-	<dl class="faq">
-		{% for item in page.faq %}
-			<div>
-				<dt>{{ item.question }}</dt>
-				<dd>{{ item.answer }}</dd>
-			</div>
-		{% endfor %}
-	</dl>
-{% endif %}
+{% include pages/pricing.html page=page %}
