Refacto multilingue - add missing translations

--- a/pages/contact/fr.html
+++ b/pages/contact/fr.html
@@ -7,6 +7,7 @@ title: Contact
 heading: Restons en contact
 description: Ravi de pouvoir vous répondre pour vous assister dans votre navigation depuis Mosaic
 success_url: /fr/message-envoye
+address: Adresse
 map:
   latitude: 48.85686777018372
   longitude: 2.3975366710140467
