--- a/pages/pricing/en.html
+++ b/pages/pricing/en.html
@@ -61,6 +61,7 @@ pricing_table:
     call_to_action:
       link: #
       text: Coming soon
+faqTitle: Pricing FAQ
 faq:
   - question: What types of payments will you accept?
     answer: Credit cards including MasterCard, Visa, or American Express, and BTC.
