--- a/pages/pricing/fr.html
+++ b/pages/pricing/fr.html
@@ -61,6 +61,7 @@ pricing_table:
     call_to_action:
       link: #
       text: A venir
+faqTitle: FAQ sur les abonnements
 faq:
   - question: Quels types de paiements accepterez-vous?
     answer: Credit cards incluant MasterCard, Visa ou American Express, BTC.
