--- a/pages/about/en.html
+++ b/pages/about/en.html
@@ -7,3 +7,47 @@ lang: en
 permalink: /about/
 ---
 {% include pages/about.html %}
+
+<section>
+    <div class="container flex">
+        <div class="text ">
+            <h2>Objectives</h2>
+            <p>Mozaic allows you to organise your content visually, find and access any resource in one click, and share it in two.</p>
+        </div>
+        <div class="text ">
+            <h2>Origin of the Project</h2>
+            <p>Mozaic was born from a simple need: to access one’s bookmarks from anywhere, regardless of the device or location.</p>
+            <p>The most natural way to provide such a service is through a single web page where everything is presented as icons arranged in folders and subfolders, all accessible with a single click.</p>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container flex">
+        <div class="text ">
+            <h2>Code of Conduct</h2>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container flex">
+        <div class="text ">
+            <p>Users: only an email address is required to sign in;</p>
+        </div>
+        <div class="text ">
+            <p>Their data: all users’ bookmarks remain their sole and exclusive property;</p>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container flex">
+        <div class="text ">
+            <p>Email: if it is ever used, it will be solely for essential communications related to Mozaic.</p>
+        </div>
+        <div class="text ">
+            <p>This free version will remain free.</p>
+        </div>
+    </div>
+</section>
