--- a/pages/contact/en.html
+++ b/pages/contact/en.html
@@ -4,8 +4,8 @@ pid: contact
 lang: en
 permalink: /contact/
 title: Contact
-heading: Restons en contact
-description: Ravi de pouvoir vous répondre pour vous assister dans votre navigation depuis Mosaic
+heading: Let's keep in touch
+description: Glad to answer any question you may have on the use of Mozaic
 success_url: /contact-success/
 address: Address
 map:
