Try to fix navigation.html breaking deploy

--- a/pages/pricing/en.html
+++ b/pages/pricing/en.html
@@ -70,6 +70,6 @@ faq:
   - question: Do you offer discounts for associations or nonprofit organizations?
     answer: Yes, send us a message and we’ll be happy to discuss it.
   - question: Questions?
-    answer: For any questions or inquiries, contact us at <a href="#">info@mozaic.link</a>.
+    answer: For any questions or inquiries, contact us at <a href="#">nfo@mozaic.link</a>.
 ---
 {% include pages/pricing.html page=page %}
